tests/pos/alpha.lc

eval alpha_equiv : 
  (\x -> x)
  =a> (\y -> y)
  =a> (\z -> z)
